--- a/test.html
+++ b/test.html
@@ -198,25 +198,42 @@
     <!-- Footer -->
     <nav class="navbar navbar-default navbar-fixed-bottom" id="footer">
         <div class="container text-center">
-                <a href="mailto:theannielin@gmail.com"> 
-                    <i class="fa fa-facebook"></i>
-                </a>
-                <a href="http://www.linkedin.com/in/theannielin/"> 
-                    <div id="linkedin"><!-- LinkedIn: www.linkedin.com/in/theannielin/ --></div> 
-                </a>
-                <a href="http://www.facebook.com/the.annie.lin"> 
-                    <i class="fa fa-facebook fa-fw"> 
-                </a>
-                <a href="http://www.instagram.com/theannielin"> 
-                    <div id="instagram"><!-- Instagram: www.instagram.com/theannielin --></div> 
-                </a>
-                <a href="http://www.thelittleorphanannie.tumblr.com/"> 
-                    <div id="tumblr"><!-- Tumblr: www.thelittleorphanannie.tumblr.com/ --></div> 
-                </a>
-                <a href="http://www.youtube.com/channel/UC4xmxjVcO3qGnQ7Y_hZlDnw"> 
-                    <div id="youtube"><!-- YouTube: www.youtube.com/channel/UC4xmxjVcO3qGnQ7Y_hZlDnw --></div> 
-                </a>
-            <br>
+            <a href="mailto:theannielin@gmail.com"> 
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-email fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
+            <a href="http://github.com/theannielin" target="_blank"> 
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
+            <a href="http://www.linkedin.com/in/theannielin/" target="_blank"> 
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
+            <a href="http://www.instagram.com/theannielin" target="_blank"> 
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
+            <a href="http://www.thelittleorphanannie.tumblr.com/" target="_blank"> 
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
+            <a href="http://www.youtube.com/channel/UC4xmxjVcO3qGnQ7Y_hZlDnw" target="_blank"> 
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
             <p style="font-size:13px; font-family:caviardreams">{ All content &copy Annie Lin }</p>
         </div>
     </nav> <!-- /.footer -->
