--- a/test.html
+++ b/test.html
@@ -201,14 +201,17 @@
             <a href="mailto:theannielin@gmail.com"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-email fa-stack-1x fa-inverse"></i>
+                  <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
+            <a href="mailto:theannielin@gmail.com"> 
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-coffee fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
             <a href="http://github.com/theannielin" target="_blank"> 
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                </span>
+                <i class="fa fa-github"></i>
             </a>
             <a href="http://www.linkedin.com/in/theannielin/" target="_blank"> 
                 <span class="fa-stack fa-lg">
@@ -225,7 +228,7 @@
             <a href="http://www.thelittleorphanannie.tumblr.com/" target="_blank"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+                  <i class="fa fa-tumblr fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
             <a href="http://www.youtube.com/channel/UC4xmxjVcO3qGnQ7Y_hZlDnw" target="_blank"> 
