--- a/test.html
+++ b/test.html
@@ -211,7 +211,7 @@
                 </span>
             </a>
             <a href="http://github.com/theannielin" target="_blank"> 
-                <i class="fa fa-github"></i>
+                <i class="fa fa-github fa-stack-2x"></i>
             </a>
             <a href="http://www.linkedin.com/in/theannielin/" target="_blank"> 
                 <span class="fa-stack fa-lg">
