--- a/test.html
+++ b/test.html
@@ -211,7 +211,10 @@
                 </span>
             </a>
             <a href="http://github.com/theannielin" target="_blank"> 
-                <i class="fa fa-github fa-stack-2x"></i>
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
+                </span>
             </a>
             <a href="http://www.linkedin.com/in/theannielin/" target="_blank"> 
                 <span class="fa-stack fa-lg">
