--- a/test.html
+++ b/test.html
@@ -84,41 +84,31 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="page-scroll" href="#home"><img class="img-responsive" width="75px" src= "images/icons/shortcuticon.png" onmouseover="this.src='images/icons/shortcuticonhover.png';" onmouseout="this.src='images/icons/shortcuticon.png';" alt="home"></a>
+    <nav class="navbar navbar-default navbar-fixed-top head-foot">
+        <div class="container text-center">
+            <br>
+            <div style="font-size:40px; font-family: passiontea;">
+                <a class="page-scroll" href="#about">about</a> | 
+                <a class="page-scroll" href="#resume">resume</a> 
+                <a class="page-scroll" href="#home">
+                    <i class="fa fa-cog fa-spin fa-5x"></i>
+                </a>
+                <a class="page-scroll" href="#projects">projects</a> | 
+                <a class="page-scroll" href="#more">more</a>
             </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about">about</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#resume">resume</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#projects">projects</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#more">more</a>
-                    </li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-->
-    </nav> <!-- /.navigation -->
+            <div class="row">
+                <div class="col-md-2">
+                    <!-- empty column-->
+                </div><!-- /.column-->
+                <div class="col-md-8">
+                    <hr>
+                </div><!-- /.column-->
+                <div class="col-md-2">
+                    <!-- empty column-->
+                </div><!-- /.column-->
+            </div><!-- /.row-->
+        </div>
+    </nav> <!-- /.header -->
 
 
     <div id="fullpage">
@@ -196,7 +186,7 @@
     </div><!-- /.fullpage-->
 
     <!-- Footer -->
-    <nav class="navbar navbar-default navbar-fixed-bottom" id="footer">
+    <nav class="navbar navbar-default navbar-fixed-bottom head-foot">
         <div class="container text-center">
             <a href="mailto:theannielin@gmail.com"> 
                 <span class="fa-stack fa-lg">
