links have color

--- a/test.html
+++ b/test.html
@@ -90,7 +90,7 @@
             <div style="font-size:30px; font-family: passiontea;">
                 <a class="page-scroll" href="#about">about</a> | 
                 <a class="page-scroll" href="#resume">resume</a> 
-                <a class="page-scroll" href="#home">
+                <a class="page-scroll" href="#home" id="cog">
                     <i class="fa fa-cog fa-spin fa-2x"></i>
                 </a>
                 <a class="page-scroll" href="#projects">projects</a> | 
@@ -230,7 +230,7 @@
                   <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
-            <p style="font-size:13px; font-family:caviardreams">{ All content &copy Annie Lin }</p>
+            <p style="font-size:13px; font-family:caviardreams; color: #666;">{ All content &copy Annie Lin }</p>
         </div>
     </nav> <!-- /.footer -->
 
