--- a/test.html
+++ b/test.html
@@ -19,8 +19,8 @@
     <meta content='harvard, annie, lin, annie lin, philadelphia' name='keywords'>
     <meta name="description" content="Hello, world! Portfolio/Personal website for and made by Annie Lin, Harvard student hailing from Philadelphia!"><meta name="description" content="Hello, world! Portfolio/Personal website for and made by Annie Lin, Harvard student hailing from Philadelphia!">
     <title>Annie Lin</title>
-    <link rel="shortcut icon" href="/images/icons/shortcuticon.png" type="image/x-icon" />
-    <link rel="icon" href="/images/icons/shortcuticon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="/img/icons/shortcuticon.png" type="image/x-icon" />
+    <link rel="icon" href="/img/icons/shortcuticon.png" type="image/x-icon" />
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -117,11 +117,18 @@
         <div class="section">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">home
-
+                    <div class="col-md-3">
+                        <!-- empty column-->
                     </div><!-- /.column-->
-                    <div class="col-md-6">home
+                    <div class="col-md-6">
+                        <img class="img-responsive" src= "img/table.png" usemap="#table" alt="home">
+                        <map name="table">
+                            <area shape="rect" coords="50,50,82,126" href="#about" alt="about">
 
+                        </map>
+                    </div><!-- /.column-->
+                    <div class="col-md-3">
+                        <!-- empty column-->
                     </div><!-- /.column-->
                 </div><!-- /.row-->
             </div><!-- /.container-->
