--- a/test.html
+++ b/test.html
@@ -116,21 +116,13 @@
         <!-- Home -->
         <div class="section">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-3">
-                        <!-- empty column-->
-                    </div><!-- /.column-->
-                    <div class="col-md-6">
-                        <img class="img-responsive" src= "img/table.png" usemap="#table" alt="home">
-                        <map name="table">
-                            <area shape="rect" coords="50,50,82,126" href="#about" alt="about">
-
-                        </map>
-                    </div><!-- /.column-->
-                    <div class="col-md-3">
-                        <!-- empty column-->
-                    </div><!-- /.column-->
-                </div><!-- /.row-->
+                <img class="img-responsive" src= "img/table.png" width="500" height="475" style="margin: 0 auto;" usemap="#table" alt="home">
+                <map name="table">
+                    <area shape="rect" coords="250,200,325,230" href="#about" alt="about">
+                    <area shape="rect" coords="115,140,190,175" href="#resume" alt="resume">
+                    <area shape="rect" coords="200,80,275,125" href="#projects" alt="projects">
+                    <area shape="rect" coords="340,125,400,160" href="#more" alt="more">
+                </map>
             </div><!-- /.container-->
         </div><!-- /.section-->
 
