--- a/test.html
+++ b/test.html
@@ -130,11 +130,33 @@
         <div class="section">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">about
-
+                    <div class="col-xs-1">
+                        <!-- empty column-->
                     </div><!-- /.column-->
-                    <div class="col-md-6">
-
+                    <div class="col-xs-6">
+                        <img class="img-responsive" src= "img/about.png" alt="about">
+                    </div><!-- /.column-->
+                    <div class="col-xs-4">
+                        <h3>SUMMARY</h3>
+                        <p>Hi! I'm Annie Lin aka the girl with bangs. 
+                            <br> 
+                            NYC-born and Philly-raised. Alumni of the 272nd class of Central. (2nd oldest public high school in the country!) Proud bearer of a simian line. Current sophomore at Harvard studying CS. Artist, Scholar, & so much more!
+                        </p>
+                        <h3>I ENJOY:</h3>
+                        <ul class="list">
+                          <li>pineapples</li>
+                          <li>franz kafka</li>
+                          <li>waterman butterfly maps</li>
+                          <li>minimalist posters</li>
+                          <li>sriracha</li>
+                          <li>wes anderson films</li>
+                          <li>rubik's cubes</li>
+                          <li>arabesques</li>
+                          <li>making peace signs</li>
+                        </ul>
+                    </div><!-- /.column-->
+                    <div class="col-xs-1">
+                        <!-- empty column-->
                     </div><!-- /.column-->
                 </div><!-- /.row-->
             </div><!-- /.container-->
