--- a/test.html
+++ b/test.html
@@ -133,16 +133,16 @@
                     <div class="col-xs-1">
                         <!-- empty column-->
                     </div><!-- /.column-->
-                    <div class="col-xs-6">
+                    <div class="col-xs-6 hidden-sm">
                         <img class="img-responsive" src= "img/about.png" alt="about">
                     </div><!-- /.column-->
                     <div class="col-xs-4">
-                        <h3>SUMMARY</h3>
+                        <h1>SUMMARY</h1>
                         <p>Hi! I'm Annie Lin aka the girl with bangs. 
                             <br> 
                             NYC-born and Philly-raised. Alumni of the 272nd class of Central. (2nd oldest public high school in the country!) Proud bearer of a simian line. Current sophomore at Harvard studying CS. Artist, Scholar, & so much more!
                         </p>
-                        <h3>I ENJOY:</h3>
+                        <h1>I ENJOY:</h1>
                         <ul class="list">
                           <li>pineapples</li>
                           <li>franz kafka</li>
