--- a/test.html
+++ b/test.html
@@ -133,7 +133,7 @@
                     <div class="col-xs-1">
                         <!-- empty column-->
                     </div><!-- /.column-->
-                    <div class="col-xs-6 hidden-sm">
+                    <div class="col-xs-6 hidden-sm hidden-xs hidden-md">
                         <img class="img-responsive" src= "img/about.png" alt="about">
                     </div><!-- /.column-->
                     <div class="col-xs-4">
