about is mobile compatible

--- a/test.html
+++ b/test.html
@@ -129,36 +129,63 @@
         <!-- About -->
         <div class="section">
             <div class="container">
-                <div class="row">
+                <!-- Large Screens -->
+                <div class="row hidden-sm hidden-xs hidden-md">
                     <div class="col-xs-1">
                         <!-- empty column-->
                     </div><!-- /.column-->
-                    <div class="col-xs-6 hidden-sm hidden-xs hidden-md">
+                    <div class="col-xs-6">
                         <img class="img-responsive" src= "img/about.png" alt="about">
                     </div><!-- /.column-->
                     <div class="col-xs-4">
                         <h1>SUMMARY</h1>
-                        <p>Hi! I'm Annie Lin aka the girl with bangs. 
-                            <br> 
-                            NYC-born and Philly-raised. Alumni of the 272nd class of Central. (2nd oldest public high school in the country!) Proud bearer of a simian line. Current sophomore at Harvard studying CS. Artist, Scholar, & so much more!
+                        <p>Hi! I'm Annie Lin aka the girl with bangs.<br> 
+                        NYC-born and Philly-raised. Alumni of the 272nd class of Central. (2nd oldest public high school in the country!) Proud bearer of a simian line. Current sophomore at Harvard studying CS. Artist, Scholar, & so much more!
                         </p>
                         <h1>I ENJOY:</h1>
                         <ul class="list">
-                          <li>pineapples</li>
-                          <li>franz kafka</li>
-                          <li>waterman butterfly maps</li>
-                          <li>minimalist posters</li>
-                          <li>sriracha</li>
-                          <li>wes anderson films</li>
-                          <li>rubik's cubes</li>
-                          <li>arabesques</li>
-                          <li>making peace signs</li>
+                            <li>pineapples</li>
+                            <li>franz kafka</li>
+                            <li>waterman butterfly maps</li>
+                            <li>minimalist posters</li>
+                            <li>sriracha</li>
+                            <li>wes anderson films</li>
+                            <li>rubik's cubes</li>
+                            <li>arabesques</li>
+                            <li>making peace signs</li>
                         </ul>
                     </div><!-- /.column-->
                     <div class="col-xs-1">
                         <!-- empty column-->
                     </div><!-- /.column-->
-                </div><!-- /.row-->
+                </div><!-- /.row--> <!-- ./ Large Screens -->
+                <!-- Small Screens -->
+                <div class="row hidden-lg">
+                    <div class="col-xs-2">
+                        <!-- empty column-->
+                    </div><!-- /.column-->
+                    <div class="col-md-8">
+                        <h1>SUMMARY</h1>
+                        <p>Hi! I'm Annie Lin aka the girl with bangs. <br> 
+                        NYC-born and Philly-raised. Alumni of the 272nd class of Central. (2nd oldest public high school in the country!) Proud bearer of a simian line. Current sophomore at Harvard studying CS. Artist, Scholar, & so much more!
+                        </p>
+                        <h1>I ENJOY:</h1>
+                        <ul class="list">
+                            <li>pineapples</li>
+                            <li>franz kafka</li>
+                            <li>waterman butterfly maps</li>
+                            <li>minimalist posters</li>
+                            <li>sriracha</li>
+                            <li>wes anderson films</li>
+                            <li>rubik's cubes</li>
+                            <li>arabesques</li>
+                            <li>making peace signs</li>
+                        </ul>
+                    </div><!-- /.column-->
+                    <div class="col-xs-2">
+                        <!-- empty column-->
+                    </div><!-- /.column-->
+                </div><!-- /.row--> <!-- ./ Small Screens -->
             </div><!-- /.container-->
         </div><!-- /.section-->
 
