--- a/test.html
+++ b/test.html
@@ -87,7 +87,16 @@
     <nav class="navbar navbar-default navbar-fixed-top head-foot">
         <div class="container text-center">
             <br>
-            <div style="font-size:30px; font-family: passiontea;">
+            <div style="font-size:30px; font-family: passiontea;" class="hidden-xs">
+                <a class="page-scroll" href="#about">about</a> | 
+                <a class="page-scroll" href="#resume">resume</a> 
+                <a class="page-scroll" href="#home" id="cog">
+                    <i class="fa fa-cog fa-spin fa-2x"></i>
+                </a>
+                <a class="page-scroll" href="#projects">projects</a> | 
+                <a class="page-scroll" href="#more">more</a>
+            </div>
+            <div style="font-size:12px; font-family: passiontea;" class="hidden-sm hidden-md hidden-lg">
                 <a class="page-scroll" href="#about">about</a> | 
                 <a class="page-scroll" href="#resume">resume</a> 
                 <a class="page-scroll" href="#home" id="cog">
@@ -193,11 +202,29 @@
         <div class="section">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">resume
-
+                    <div class="col-xs-2">
+                        <!-- empty column-->
                     </div><!-- /.column-->
-                    <div class="col-md-6">
-
+                    <div class="col-md-8">
+                        <h1>SUMMARY</h1>
+                        <p>Hi! I'm Annie Lin aka the girl with bangs. <br> 
+                        NYC-born and Philly-raised. Alumni of the 272nd class of Central. (2nd oldest public high school in the country!) Proud bearer of a simian line. Current sophomore at Harvard studying CS. Artist, Scholar, & so much more!
+                        </p>
+                        <h1>I ENJOY:</h1>
+                        <ul class="list">
+                            <li>pineapples</li>
+                            <li>franz kafka</li>
+                            <li>waterman butterfly maps</li>
+                            <li>minimalist posters</li>
+                            <li>sriracha</li>
+                            <li>wes anderson films</li>
+                            <li>rubik's cubes</li>
+                            <li>arabesques</li>
+                            <li>making peace signs</li>
+                        </ul>
+                    </div><!-- /.column-->
+                    <div class="col-xs-2">
+                        <!-- empty column-->
                     </div><!-- /.column-->
                 </div><!-- /.row-->
             </div><!-- /.container-->
