--- a/test.html
+++ b/test.html
@@ -84,19 +84,10 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top head-foot">
+    <nav class="navbar navbar-default navbar-fixed-top head-foot non-mobile">
         <div class="container text-center">
             <br>
-            <div style="font-size:30px; font-family: passiontea;" class="hidden-xs">
-                <a class="page-scroll" href="#about">about</a> | 
-                <a class="page-scroll" href="#resume">resume</a> 
-                <a class="page-scroll" href="#home" id="cog">
-                    <i class="fa fa-cog fa-spin fa-2x"></i>
-                </a>
-                <a class="page-scroll" href="#projects">projects</a> | 
-                <a class="page-scroll" href="#more">more</a>
-            </div>
-            <div style="font-size:15px; font-family: passiontea;" class="hidden-sm hidden-md hidden-lg">
+            <div id="nav-top">
                 <a class="page-scroll" href="#about">about</a> | 
                 <a class="page-scroll" href="#resume">resume</a> 
                 <a class="page-scroll" href="#home" id="cog">
@@ -119,8 +110,7 @@
         </div>
     </nav> <!-- /.header -->
 
-
-    <div id="fullpage">
+    <div id="fullpage" class="non-mobile">
         
         <!-- Home -->
         <div class="section">
@@ -261,7 +251,7 @@
     </div><!-- /.fullpage-->
 
     <!-- Footer -->
-    <nav class="navbar navbar-default navbar-fixed-bottom head-foot">
+    <nav class="navbar navbar-default navbar-fixed-bottom head-foot non-mobile">
         <div class="container text-center">
             <a href="mailto:theannielin@gmail.com"> 
                 <span class="fa-stack fa-lg">
