--- a/test.html
+++ b/test.html
@@ -83,11 +83,58 @@
 
 <body>
 
+    <div class="mobile text-center">
+        <br><br>
+        <a href="mailto:theannielin@gmail.com"> 
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+        <a href="mailto:theannielin@gmail.com"> 
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-coffee fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+        <a href="http://github.com/theannielin" target="_blank"> 
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+        <a href="http://www.linkedin.com/in/theannielin/" target="_blank"> 
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+        <a href="http://www.instagram.com/theannielin" target="_blank"> 
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+        <a href="http://www.thelittleorphanannie.tumblr.com/" target="_blank"> 
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-tumblr fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+        <a href="http://www.youtube.com/channel/UC4xmxjVcO3qGnQ7Y_hZlDnw" target="_blank"> 
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
+    </div>
+
+
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top head-foot non-mobile">
         <div class="container text-center">
             <br>
-            <div id="nav-top">
+            <div style="font-size:30px; font-family: passiontea;">
                 <a class="page-scroll" href="#about">about</a> | 
                 <a class="page-scroll" href="#resume">resume</a> 
                 <a class="page-scroll" href="#home" id="cog">
@@ -109,6 +156,7 @@
             </div><!-- /.row-->
         </div>
     </nav> <!-- /.header -->
+
 
     <div id="fullpage" class="non-mobile">
         
