--- a/test.html
+++ b/test.html
@@ -81,8 +81,58 @@
 
 <body>
 
+    <!-- Footer -->
+    <nav class="navbar navbar-default navbar-fixed-top head-foot hidden-sm hidden-md hidden-lg">
+        <div class="container text-center">
+            <br><br>
+            <a href="mailto:theannielin@gmail.com"> 
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
+            <a href="mailto:theannielin@gmail.com"> 
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-coffee fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
+            <a href="http://github.com/theannielin" target="_blank"> 
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
+            <a href="http://www.linkedin.com/in/theannielin/" target="_blank"> 
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
+            <a href="http://www.instagram.com/theannielin" target="_blank"> 
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
+            <a href="http://www.thelittleorphanannie.tumblr.com/" target="_blank"> 
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-tumblr fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
+            <a href="http://www.youtube.com/channel/UC4xmxjVcO3qGnQ7Y_hZlDnw" target="_blank"> 
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
+            <p style="font-size:13px; font-family:caviardreams; color: #666;">{ TO VIEW MORE, PLEASE USE A NON-MOBILE DEVICE }</p>
+        </div>
+    </nav> <!-- /.footer -->
+
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top head-foot non-mobile">
+    <nav class="navbar navbar-default navbar-fixed-top head-foot hidden-xs">
         <div class="container text-center">
             <br>
             <div style="font-size:30px; font-family: passiontea;">
@@ -109,7 +159,7 @@
     </nav> <!-- /.header -->
 
 
-    <div id="fullpage" class="non-mobile">
+    <div id="fullpage" class="hidden-xs">
         
         <!-- Home -->
         <div class="section">
@@ -128,7 +178,7 @@
         <div class="section">
             <div class="container">
                 <!-- Large Screens -->
-                <div class="row hidden-sm hidden-xs hidden-md">
+                <div class="row hidden-xs hidden-md">
                     <div class="col-xs-1">
                         <!-- empty column-->
                     </div><!-- /.column-->
@@ -250,7 +300,7 @@
     </div><!-- /.fullpage-->
 
     <!-- Footer -->
-    <nav class="navbar navbar-default navbar-fixed-bottom head-foot non-mobile">
+    <nav class="navbar navbar-default navbar-fixed-bottom head-foot hidden-xs">
         <div class="container text-center">
             <a href="mailto:theannielin@gmail.com"> 
                 <span class="fa-stack fa-lg">
@@ -297,52 +347,6 @@
             <p style="font-size:13px; font-family:caviardreams; color: #666;">{ All content &copy Annie Lin }</p>
         </div>
     </nav> <!-- /.footer -->
-
-    <div class="mobile text-center">
-        <br><br>
-        <a href="mailto:theannielin@gmail.com"> 
-            <span class="fa-stack fa-lg">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
-            </span>
-        </a>
-        <a href="mailto:theannielin@gmail.com"> 
-            <span class="fa-stack fa-lg">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-coffee fa-stack-1x fa-inverse"></i>
-            </span>
-        </a>
-        <a href="http://github.com/theannielin" target="_blank"> 
-            <span class="fa-stack fa-lg">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
-            </span>
-        </a>
-        <a href="http://www.linkedin.com/in/theannielin/" target="_blank"> 
-            <span class="fa-stack fa-lg">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-            </span>
-        </a>
-        <a href="http://www.instagram.com/theannielin" target="_blank"> 
-            <span class="fa-stack fa-lg">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
-            </span>
-        </a>
-        <a href="http://www.thelittleorphanannie.tumblr.com/" target="_blank"> 
-            <span class="fa-stack fa-lg">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-tumblr fa-stack-1x fa-inverse"></i>
-            </span>
-        </a>
-        <a href="http://www.youtube.com/channel/UC4xmxjVcO3qGnQ7Y_hZlDnw" target="_blank"> 
-            <span class="fa-stack fa-lg">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
-            </span>
-        </a>
-    </div>
 
 
     <!-- ============= Outdated Browser ============= -->
