--- a/test.html
+++ b/test.html
@@ -127,7 +127,7 @@
                   <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
-            <p style="font-size:13px; font-family:caviardreams; color: #666;">{ TO VIEW MORE, PLEASE USE A NON-MOBILE DEVICE }</p>
+            <p style="font-size:13px; font-family:caviardreams; color: #666;">{ TO VIEW MORE, PLEASE USE A WIDER SCREEN/NON-MOBILE DEVICE }</p>
         </div>
     </nav> <!-- /.footer -->
 
