--- a/test.html
+++ b/test.html
@@ -178,7 +178,7 @@
         <div class="section">
             <div class="container">
                 <!-- Large Screens -->
-                <div class="row hidden-xs hidden-md">
+                <div class="row hidden-sm hidden-md">
                     <div class="col-xs-1">
                         <!-- empty column-->
                     </div><!-- /.column-->
