--- a/test.html
+++ b/test.html
@@ -81,7 +81,7 @@
 
 <body>
 
-    <!-- Footer -->
+    <!-- Mobile -->
     <nav class="navbar navbar-default navbar-fixed-top head-foot hidden-sm hidden-md hidden-lg">
         <div class="container text-center">
             <br><br>
@@ -129,7 +129,7 @@
             </a>
             <p style="font-size:13px; font-family:caviardreams; color: #666;">{ TO VIEW MORE, PLEASE USE A WIDER SCREEN/NON-MOBILE DEVICE }</p>
         </div>
-    </nav> <!-- /.footer -->
+    </nav> <!-- /.mobile-->
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top head-foot hidden-xs">
