--- a/test.html
+++ b/test.html
@@ -84,7 +84,7 @@
     <!-- Mobile -->
     <nav class="navbar navbar-default navbar-fixed-top head-foot hidden-sm hidden-md hidden-lg">
         <div class="container text-center">
-            <br><br>
+            <br><br><br>
             <a href="mailto:theannielin@gmail.com"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
@@ -109,6 +109,7 @@
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
+            <br>
             <a href="http://www.instagram.com/theannielin" target="_blank"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
@@ -127,7 +128,8 @@
                   <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
-            <p style="font-size:13px; font-family:caviardreams; color: #666;">{ TO VIEW MORE, PLEASE USE A WIDER SCREEN/NON-MOBILE DEVICE }</p>
+            <p style="font-size:13px; font-family:caviardreams; color: #666;">TO VIEW MORE,<br> 
+                PLEASE USE A WIDER SCREEN/NON-MOBILE DEVICE</p>
         </div>
     </nav> <!-- /.mobile-->
 
