--- a/test.html
+++ b/test.html
@@ -83,7 +83,7 @@
 
     <!-- Mobile -->
     <nav class="navbar navbar-default navbar-fixed-top head-foot hidden-sm hidden-md hidden-lg">
-        <div class="container text-center">
+        <div class="container text-center" style="font-size:13px;">
             <br><br><br>
             <a href="mailto:theannielin@gmail.com"> 
                 <span class="fa-stack fa-lg">
@@ -128,7 +128,7 @@
                   <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
-            <p style="font-size:13px; font-family:caviardreams; color: #666;">TO VIEW MORE,<br> 
+            <p style="font-family:caviardreams; color: #666;">TO VIEW MORE,<br> 
                 PLEASE USE A WIDER SCREEN/NON-MOBILE DEVICE</p>
         </div>
     </nav> <!-- /.mobile-->
@@ -303,7 +303,7 @@
 
     <!-- Footer -->
     <nav class="navbar navbar-default navbar-fixed-bottom head-foot hidden-xs">
-        <div class="container text-center">
+        <div class="container text-center" style="font-size:13px;">
             <a href="mailto:theannielin@gmail.com"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
@@ -346,7 +346,7 @@
                   <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
-            <p style="font-size:13px; font-family:caviardreams; color: #666;">{ All content &copy Annie Lin }</p>
+            <p style="font-family:caviardreams; color: #666;">{ All content &copy Annie Lin }</p>
         </div>
     </nav> <!-- /.footer -->
 
