--- a/test.html
+++ b/test.html
@@ -84,7 +84,6 @@
     <!-- Mobile -->
     <nav class="navbar navbar-default navbar-fixed-top head-foot hidden-sm hidden-md hidden-lg">
         <div class="container text-center" style="font-size:13px;">
-            <br><br><br>
             <a href="mailto:theannielin@gmail.com"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
@@ -127,9 +126,9 @@
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
                 </span>
-            </a>
+            </a><br>
             <p style="font-family:caviardreams; color: #666;">TO VIEW MORE,<br> 
-                PLEASE USE A WIDER SCREEN/NON-MOBILE DEVICE</p>
+                PLEASE USE A WIDER SCREEN/<br>NON-MOBILE DEVICE</p>
         </div>
     </nav> <!-- /.mobile-->
 
