--- a/test.html
+++ b/test.html
@@ -84,7 +84,7 @@
     <!-- Mobile -->
     <nav class="navbar navbar-default navbar-fixed-top head-foot hidden-sm hidden-md hidden-lg">
         <div class="container text-center" style="font-size:13px;">
-            <br><br><br><br>
+            <br><br><br>
             <a href="mailto:theannielin@gmail.com"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
@@ -137,7 +137,7 @@
     <nav class="navbar navbar-default navbar-fixed-top head-foot hidden-xs">
         <div class="container text-center">
             <br>
-            <div style="font-size:30px; font-family: passiontea;">
+            <div style="font-size:30px; font-family: passiontea; color: #666;">
                 <a class="page-scroll" href="#about">about</a> | 
                 <a class="page-scroll" href="#resume">resume</a> 
                 <a class="page-scroll" href="#home" id="cog">
@@ -247,22 +247,56 @@
                         <!-- empty column-->
                     </div><!-- /.column-->
                     <div class="col-md-8">
-                        <h1>SUMMARY</h1>
-                        <p>Hi! I'm Annie Lin aka the girl with bangs. <br> 
-                        NYC-born and Philly-raised. Alumni of the 272nd class of Central. (2nd oldest public high school in the country!) Proud bearer of a simian line. Current sophomore at Harvard studying CS. Artist, Scholar, & so much more!
-                        </p>
-                        <h1>I ENJOY:</h1>
+                        <br>
+                        <a class="btn btn-default btn-sm no-margin" href="works/AnnieLinResume.pdf" target="_blank">
+                            <i class="fa fa-download"></i> 
+                            Detailed Resume
+                        </a>
+                        <br>
+                        <h1 class="no-margin"> Harvard College </h1>
+                        <h2 class="no-margin">Cambridge, MA | A.B. Computer Science, Citation in Japanese (Expected Graduation: May 2017)</h2>
                         <ul class="list">
-                            <li>pineapples</li>
-                            <li>franz kafka</li>
-                            <li>waterman butterfly maps</li>
-                            <li>minimalist posters</li>
-                            <li>sriracha</li>
-                            <li>wes anderson films</li>
-                            <li>rubik's cubes</li>
-                            <li>arabesques</li>
-                            <li>making peace signs</li>
+                            <li>Taiwanese Cultural Society (Co-President)</li>
+                            <li>Women in Computer Science (Publicity Chair)</li>
+                            <li>First Generation Student Union (Public Relations Chair)</li>
+                            <li>Rubik's Cube Club (Secretary)</li>
+                            <li>IMUSE (Design Chair)</li>
                         </ul>
+                        <h1 class="no-margin"> Central High School</h1>
+                        <h2 class="no-margin">Philadelphia, PA | B.A. Graduated 3rd in class of 610. SAT I: M: 800 R: 700 W: 760. (June 2013)</h2>
+                        <ul class="list">
+                            <li>Student Environmental Action Society President (3 Years)</li>
+                            <li>National Honor Society Secretary (2 Years)</li>
+                            <li>Math Club President (2 Years)</li>
+                            <li>Art With Heart (Service Organization) President (2 Years)</li>
+                            <li>Yearbook Academic Editor</li>
+                            <li>Ribbon Dancing Team Member</li>
+                        </ul>
+                        <h1 class="no-margin">Work Experience </h1>
+                        <ul class="list">
+                            <li>Japan Digital Archives</li>
+                            <li>Cabot Science Library (Harvard University)</li>
+                            <li>Harvard Forest</li>
+                            <li>Center for International Exchange (Showa Women’s University)</li>
+                            <li>Ethnic Technologies, LLC</li>
+                            <li>Boat People SOS (Summer Youth Bike and Environmental Program)</li>
+                            <li>STARTALK Chinese Academy</li>
+                            <li>White-Williams Scholars</li>
+                        </ul>
+                        <h1 class="no-margin"> Skills </h1>
+                        <ul class="list">
+                            <li>Javascript</li>
+                            <li>C</li>
+                            <li>PHP</li>
+                            <li>OCAML</li>
+                            <li>PYTHON</li>
+                            <li>HTML/CSS</li>
+                            <li>Fluent Chinese (Mandarin)</li>
+                            <li>Basic German</li>
+                            <li>Elementary Japanese</li>
+                            <li>Graphic Design (Photoshop/Illustrator)</li>
+                        </ul>
+
                     </div><!-- /.column-->
                     <div class="col-xs-2">
                         <!-- empty column-->
@@ -303,7 +337,7 @@
 
     <!-- Footer -->
     <nav class="navbar navbar-default navbar-fixed-bottom head-foot hidden-xs">
-        <div class="container text-center" style="font-size:13px;">
+        <div class="container text-center" style="font-size:10px; color: #666">
             <a href="mailto:theannielin@gmail.com"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
