--- a/test.html
+++ b/test.html
@@ -137,7 +137,7 @@
     <nav class="navbar navbar-default navbar-fixed-top head-foot hidden-xs">
         <div class="container text-center">
             <br>
-            <div style="font-size:30px; font-family: passiontea; color: #666;">
+            <div style="font-size:30px; font-family: passiontea;">
                 <a class="page-scroll" href="#about">about</a> | 
                 <a class="page-scroll" href="#resume">resume</a> 
                 <a class="page-scroll" href="#home" id="cog">
@@ -262,33 +262,22 @@
                             <li>Rubik's Cube Club (Secretary)</li>
                             <li>IMUSE (Design Chair)</li>
                         </ul>
-                        <h1 class="no-margin"> Central High School</h1>
-                        <h2 class="no-margin">Philadelphia, PA | B.A. Graduated 3rd in class of 610. SAT I: M: 800 R: 700 W: 760. (June 2013)</h2>
-                        <ul class="list">
-                            <li>Student Environmental Action Society President (3 Years)</li>
-                            <li>National Honor Society Secretary (2 Years)</li>
-                            <li>Math Club President (2 Years)</li>
-                            <li>Art With Heart (Service Organization) President (2 Years)</li>
-                            <li>Yearbook Academic Editor</li>
-                            <li>Ribbon Dancing Team Member</li>
-                        </ul>
                         <h1 class="no-margin">Work Experience </h1>
                         <ul class="list">
                             <li>Japan Digital Archives</li>
                             <li>Cabot Science Library (Harvard University)</li>
                             <li>Harvard Forest</li>
-                            <li>Center for International Exchange (Showa Women’s University)</li>
+                            <li>Showa Women’s University</li>
                             <li>Ethnic Technologies, LLC</li>
-                            <li>Boat People SOS (Summer Youth Bike and Environmental Program)</li>
-                            <li>STARTALK Chinese Academy</li>
+                            <li>Boat People SOS</li>
                             <li>White-Williams Scholars</li>
+                            <li>Young Voices Monologue Festival</li>
                         </ul>
                         <h1 class="no-margin"> Skills </h1>
                         <ul class="list">
-                            <li>Javascript</li>
                             <li>C</li>
-                            <li>PHP</li>
                             <li>OCAML</li>
+                            <li>SQL</li>
                             <li>PYTHON</li>
                             <li>HTML/CSS</li>
                             <li>Fluent Chinese (Mandarin)</li>
@@ -309,11 +298,63 @@
         <div class="section">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">projects
-
+                    <div class="col-xs-2">
+                        <!-- empty column-->
                     </div><!-- /.column-->
-                    <div class="col-md-6">
-
+                    <div class="col-xs-8">
+                        <br>
+                        <a class="btn btn-default btn-sm no-margin" href="works/AnnieLinResume.pdf" target="_blank">
+                            <i class="fa fa-github-alt"></i> 
+                            Fork Me on Github
+                        </a>
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <a href="http://brushup.me/" target="_blank">
+                                    <img class="img-responsive" src="images/icons/brushupicon.png" alt="brushup" onmouseover="this.src='images/icons/plateicon.png';" onmouseout="this.src='images/icons/brushupicon.png';">
+                                </a>
+                            </div><!-- /.column-->
+                            <div class="col-xs-3">
+                                <a href="http://brushup.me/" target="_blank">
+                                    <img class="img-responsive" src="images/icons/brushupicon.png" alt="brushup">
+                                </a>
+                            </div><!-- /.column-->
+                            <div class="col-xs-3">
+                                <a href="http://brushup.me/" target="_blank">
+                                    <img class="img-responsive" src="images/icons/brushupicon.png" alt="brushup">
+                                </a>
+                            </div><!-- /.column-->
+                            <div class="col-xs-3">
+                                <a href="http://brushup.me/" target="_blank">
+                                    <img class="img-responsive" src="images/icons/brushupicon.png" alt="brushup">
+                                </a>
+                            </div><!-- /.column-->
+                        </div><!-- /.row-->
+                        <br>
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <a href="http://brushup.me/" target="_blank">
+                                    <img class="img-responsive" src="images/icons/brushupicon.png" alt="brushup">
+                                </a>
+                            </div><!-- /.column-->
+                            <div class="col-xs-3">
+                                <a href="http://brushup.me/" target="_blank">
+                                    <img class="img-responsive" src="images/icons/brushupicon.png" alt="brushup">
+                                </a>
+                            </div><!-- /.column-->
+                            <div class="col-xs-3">
+                                <a href="http://brushup.me/" target="_blank">
+                                    <img class="img-responsive" src="images/icons/brushupicon.png" alt="brushup">
+                                </a>
+                            </div><!-- /.column-->
+                            <div class="col-xs-3">
+                                <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                                    <img class="img-responsive" src="images/icons/brushupicon.png" alt="brushup">
+                                </a>
+                            </div><!-- /.column-->
+                        </div><!-- /.row-->
+                    </div><!-- /.column-->
+                    <div class="col-xs-2">
+                        <!-- empty column-->
                     </div><!-- /.column-->
                 </div><!-- /.row-->
             </div><!-- /.container-->
@@ -323,11 +364,17 @@
         <div class="section">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">more
-
+                    <div class="col-xs-2">
+                        <!-- empty column-->
                     </div><!-- /.column-->
-                    <div class="col-md-6">
-
+                    <div class="col-xs-8">
+                        <div class="row">
+                            <div class="col-xs-2">projects
+                            </div><!-- /.column-->
+                        </div><!-- /.row-->
+                    </div><!-- /.column-->
+                    <div class="col-xs-2">
+                        <!-- empty column-->
                     </div><!-- /.column-->
                 </div><!-- /.row-->
             </div><!-- /.container-->
@@ -337,7 +384,7 @@
 
     <!-- Footer -->
     <nav class="navbar navbar-default navbar-fixed-bottom head-foot hidden-xs">
-        <div class="container text-center" style="font-size:10px; color: #666">
+        <div class="container text-center" style="font-size:10px;">
             <a href="mailto:theannielin@gmail.com"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
@@ -383,6 +430,32 @@
             <p style="font-family:caviardreams; color: #666;">{ All content &copy Annie Lin }</p>
         </div>
     </nav> <!-- /.footer -->
+
+
+
+    <!-- Modal 1 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Application has not yet opened!</h2>
+                            <p>Please check back again!</p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Window</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <!-- ============= Outdated Browser ============= -->
