--- a/test.html
+++ b/test.html
@@ -392,7 +392,7 @@
                 </span>
             </a>
             <a href="#coffee" data-toggle="modal"> 
-                <span class="fa-stack fa-lg">
+                <span class="fa-stack fa-lg" style="text-decoration:none; border: none;">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-coffee fa-stack-1x fa-inverse"></i>
                 </span>
