--- a/test.html
+++ b/test.html
@@ -391,8 +391,8 @@
                   <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
-            <a href="#coffee" data-toggle="modal"> 
-                <span class="fa-stack fa-lg" style="text-decoration:none; border: none;">
+            <a href="#coffee" data-toggle="modal" style="text-decoration:none; border: none;"> 
+                <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-coffee fa-stack-1x fa-inverse"></i>
                 </span>
