--- a/test.html
+++ b/test.html
@@ -470,7 +470,7 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Coffee</h2>
-                            <p>Coffee</p>
+                            <p>Coffee 1</p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close Window</button>
                         </div>
                     </div>
