--- a/test.html
+++ b/test.html
@@ -88,7 +88,7 @@
                   <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
-            <a href="#coffee" data-toggle="modal" class="coffeelink"> 
+            <a href="#coffee" data-toggle="modal" data-backdrop="false"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-coffee fa-stack-1x fa-inverse"></i>
@@ -344,7 +344,7 @@
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
-                                <a href="#modal1" data-toggle="modal">
+                                <a href="#modal1" data-toggle="modal" data-backdrop="false">
                                     <img class="img-responsive" src="images/icons/brushupicon.png" alt="brushup">
                                 </a>
                             </div><!-- /.column-->
@@ -391,7 +391,7 @@
                   <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
-            <a href="#coffee" data-toggle="modal" class="coffeelink"> 
+            <a href="#coffee" data-toggle="modal" data-backdrop="false"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-coffee fa-stack-1x fa-inverse"></i>
@@ -445,8 +445,9 @@
                     <div class="col-md-8 col-md-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Application has not yet opened!</h2>
-                            <p>Please check back again!</p>
+                            <h1>Design/Art</h1>
+                            <iframe style="border:none;" src="http://files.photosnack.com/iframejs/embed.html?hash=pt9529ii&t=1400885491" width="350" height="350" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" ></iframe>
+                            <br>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close Window</button>
                         </div>
                     </div>
@@ -470,7 +471,7 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Coffee</h2>
-                            <p>Coffee 1</p>
+                            <p>Coffee 2</p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close Window</button>
                         </div>
                     </div>
