--- a/test.html
+++ b/test.html
@@ -364,14 +364,30 @@
                     <div class="col-xs-2">
                         <!-- empty column-->
                     </div><!-- /.column-->
-                    <div class="col-xs-8">
-                        <div class="row">
-                            <div class="col-xs-8">
-                                <br>
-                            </div><!-- /.column-->
-                            <div class="col-xs-8">
-                            </div><!-- /.column-->
-                        </div><!-- /.row-->
+                    <div class="col-xs-8 text-center" >
+                        <br>
+                        <h1> SEE THE WORLD THROUGH MY EYES</h1>
+                        <br>
+                        <a href="http://www.instagram.com/theannielin" target="_blank"> 
+                            <span class="fa-stack fa-lg">
+                              <i class="fa fa-circle fa-stack-2x"></i>
+                              <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="http://www.thelittleorphanannie.tumblr.com/" target="_blank"> 
+                            <span class="fa-stack fa-lg">
+                              <i class="fa fa-circle fa-stack-2x"></i>
+                              <i class="fa fa-tumblr fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a href="http://www.youtube.com/channel/UC4xmxjVcO3qGnQ7Y_hZlDnw" target="_blank"> 
+                            <span class="fa-stack fa-lg">
+                              <i class="fa fa-circle fa-stack-2x"></i>
+                              <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <br>
+                        <img src="images/eyes.png" style="width: 260px; margin: 0 auto;"/>
                     </div><!-- /.column-->
                     <div class="col-xs-2">
                         <!-- empty column-->
@@ -407,24 +423,6 @@
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                </span>
-            </a>
-            <a href="http://www.instagram.com/theannielin" target="_blank"> 
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
-                </span>
-            </a>
-            <a href="http://www.thelittleorphanannie.tumblr.com/" target="_blank"> 
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-tumblr fa-stack-1x fa-inverse"></i>
-                </span>
-            </a>
-            <a href="http://www.youtube.com/channel/UC4xmxjVcO3qGnQ7Y_hZlDnw" target="_blank"> 
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
             <p style="font-family:caviardreams; color: #666;">{ All content &copy Annie Lin }</p>
