--- a/test.html
+++ b/test.html
@@ -364,7 +364,7 @@
                     <div class="col-xs-2">
                         <!-- empty column-->
                     </div><!-- /.column-->
-                    <div class="col-xs-8 text-center" >
+                    <div class="col-xs-8 text-center" style="font-size: 20px;">
                         <br>
                         <h1> SEE THE WORLD THROUGH MY EYES</h1>
                         <br>
@@ -374,7 +374,7 @@
                               <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
                             </span>
                         </a>
-                        <a href="http://www.thelittleorphanannie.tumblr.com/" target="_blank"> 
+                        <a href="http://thelittleorphanannie.tumblr.com/archive" target="_blank"> 
                             <span class="fa-stack fa-lg">
                               <i class="fa fa-circle fa-stack-2x"></i>
                               <i class="fa fa-tumblr fa-stack-1x fa-inverse"></i>
