--- a/test.html
+++ b/test.html
@@ -124,7 +124,12 @@
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
                 </span>
-            </a><br>
+            </a><br><br>
+            <a class="btn btn-default btn-sm" href="#coffee" data-toggle="modal"> 
+                <i class="fa fa-coffee"></i> 
+                Coffee Appointments
+            </a>
+            <br><br>
             <p style="font-family:caviardreams; color: #666;">TO VIEW MORE,<br> 
                 PLEASE USE A WIDER SCREEN/<br>NON-MOBILE DEVICE</p>
         </div>
@@ -368,12 +373,11 @@
                         <br>
                         <h1> SEE THE WORLD THROUGH MY EYES</h1>
                         <br>
-                        <a href="#coffee" data-toggle="modal" data-backdrop="false"> 
-                            <span class="fa-stack fa-lg">
-                              <i class="fa fa-circle fa-stack-2x"></i>
-                              <i class="fa fa-coffee fa-stack-1x fa-inverse"></i>
-                            </span>
+                        <a class="btn btn-default btn-sm" href="#coffee" data-toggle="modal"> 
+                            <i class="fa fa-coffee"></i> 
+                            Coffee Appointments
                         </a>
+                        <br>
                         <a href="http://www.instagram.com/theannielin" target="_blank"> 
                             <span class="fa-stack fa-lg">
                               <i class="fa fa-circle fa-stack-2x"></i>
