--- a/test.html
+++ b/test.html
@@ -82,16 +82,11 @@
     <nav class="navbar navbar-default navbar-fixed-top head-foot hidden-sm hidden-md hidden-lg">
         <div class="container text-center" style="font-size:13px;">
             <br><br><br>
+            <h1>HI, I'M ANNIE LIN</h1>
             <a href="mailto:theannielin@gmail.com"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
-                </span>
-            </a>
-            <a href="#coffee" data-toggle="modal" data-backdrop="false"> 
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-coffee fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
             <a href="http://github.com/theannielin" target="_blank"> 
@@ -372,11 +367,11 @@
                     <div class="col-xs-8 text-center" style="font-size: 25px;">
                         <br>
                         <h1> SEE THE WORLD THROUGH MY EYES</h1>
-                        <br>
                         <a class="btn btn-default btn-sm" href="#coffee" data-toggle="modal"> 
                             <i class="fa fa-coffee"></i> 
                             Coffee Appointments
                         </a>
+                        <br>
                         <br>
                         <a href="http://www.instagram.com/theannielin" target="_blank"> 
                             <span class="fa-stack fa-lg">
