--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
         //call function after DOM ready
         addLoadEvent(function(){
             outdatedBrowser({
-                bgColor: '#f25648',
+                bgColor: '#16a085',
                 color: '#ffffff',
                 lowerThan: 'transform',
                 languagePath: '../outdatedbrowser/lang/en.html'
