--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     </div><!-- /.column-->
                 </div><!-- /.row--> <!-- ./ Large Screens -->
                 <!-- Small Screens -->
-                <div class="row hidden-lg">
+                <div class="row hidden-lg text-center">
                     <div class="col-xs-2">
                         <!-- empty column-->
                     </div><!-- /.column-->
@@ -238,7 +238,7 @@
 
         <!-- Resume -->
         <div class="section">
-            <div class="container">
+            <div class="container text-center">
                 <div class="row">
                     <div class="col-xs-2">
                         <!-- empty column-->
