--- a/index.html
+++ b/index.html
@@ -182,7 +182,9 @@
                         <!-- empty column-->
                     </div><!-- /.column-->
                     <div class="col-xs-6">
-                        <img class="img-responsive" src= "img/about.png" alt="about">
+                        <a href="http://overture.me/annielin" target="_blank">
+                            <img class="img-responsive" src= "img/about.png" alt="about">
+                        </a>
                     </div><!-- /.column-->
                     <div class="col-xs-4">
                         <h1>SUMMARY</h1>
